@@ -301,7 +301,6 @@ static void R_AddLine (seg_t *line)
   angle_t  span;
   angle_t  tspan;
   static sector_t tempsec;     // killough 3/8/98: ceiling/water hack
-  //  boolean solid = true;
 
   curline = line;
 
@@ -624,6 +623,7 @@ static void R_Subsector(int num)
     if (line->miniseg == false)
       R_AddLine (line);
     line++;
+    curline = NULL; /* cph 2001/11/18 - must clear curline now we're done with it, so R_ColourMap doesn't try using it for other things */
   }
 #ifdef GL_DOOM
   gld_AddPlane(num, floorplane, ceilingplane);
