@@ -2,7 +2,8 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.1 to v2.4.2
-- Move gamma correction tables into prboom.wad.
+- Move gamma correction tables into prboom.wad
+- Clean up light level calculations for walls & sprites
 - CheckIWAD uses ANSI C streams for better portability and error handling
 - Make screen wipe time independent of resolution
 - Applied various small cleanups and fixes from PrBoom 2.3.1
